# toybrains

./: .gitignore  0_tutorial.ipynb  README.md  Toybrains_setup_derivation.md  baseline_analysis.ipynb  config.py  create_shapes_data.py  create_sim-data.ipynb  create_toybrains.ipynb  create_toybrains.py  environment.yml  main_baseline-short.ipynb  main_baseline-simplified.ipynb  main_baseline.ipynb  pyproject.toml  requirements.txt  supervised_learning.ipynb  tutorial0-create_toybrains.ipynb  tutorial1-estimate_baselines.ipynb  tutorial3-DeepRepVizBackend.ipynb  unsupervised_learning.ipynb  visualization.py  visualize_data_distributions.ipynb  viz_data_dists.ipynb  viz_gen_data_dists.ipynb
_archive/: debug_pregen_toybrains.ipynb  fit_DL_model.py
analysis/: supervised_learning.ipynb  unsupervised_learning.ipynb
configs/: lbl1cov1.py  lbl1cov1_lowsignal.py  lbl1cov1_midsignal.py  lbl5cov3.py  tweak-easy.py  tweak_probas-extreme.py
docs/: How-to-use.ipynb  doc-figs-gen.ipynb  documentation.ipynb  formal_definition_and_proof.md  proof.md
experiments/: ReadMeArJunu.md  fit_DL_model.ipynb  fit_DL_model.py  groundtruth-contrib-derivation.ipynb  lbl1cov1_0-genconfigs.ipynb  lbl1cov1_1-linmodel.ipynb  lbl1cov1_2-DLmodel.ipynb  lbl1cov1_3-backend.ipynb  lbl1cov1_3-backend.py
helper/: viz_helpers.py
setting/: lbls-3bin_covs-3_17Jul23.py
tutorials/: tutorial0-create_toybrains.ipynb  tutorial1-create_toybrains.ipynb  tutorial2-fit_DL_model.ipynb
utils/: DLutils.py  baseline.py  configutils.py  confounds.py  dataset.py  fitmodel.py  genutils.py  genutils_all.py  table.py  (+8 more)
(+19 files in other folders)
