[tool.poetry]
name = "toybrains"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "1.26.0"
pandas = "2.1.2"
matplotlib = "3.8.1"
joblib = "1.3.2"
tqdm = "4.66.1"
torchvision = "0.16.0"
torchmetrics = "1.2.0"
lightning-utilities = "0.9.0"
lightning = "^2.1.0"
scikit-learn = "1.3.2"
einops = "0.7.0"
statsmodels = "0.14.0"
tensorboard = "2.15.1"
dcor = "^0.6"
seaborn = "^0.13.0"
colordict = "^1.2.6"
tabulate = "^0.9.0"
graphviz = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
